[package]
name = "greedofexile"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["clock", "std"] }
directories = "6.0.0"
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui_plot = "0.34.1"
image = "0.25.10"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
url = "2.5.8"
